# python-julia-set

./: .gitignore  flake.nix  gpu_julia_set.py  julia.cl  pyproject.toml  test.sh
